get json stuff from server, send to server